update to the newest perplexity model

--- a/config.example.yml
+++ b/config.example.yml
@@ -16,7 +16,7 @@ slack:
 
 perplexity:
   api_key: ${PPLX_API_KEY}
-
+  model: "sonar-pro"
 research_topics:
   - name: "LLM Inference"
     keywords: ["llm", "inference", "serving", "latency", "throughput"]
