fixed date filtering bugs and workflow bug

--- a/.github/workflows/scholar_classifier.yml
+++ b/.github/workflows/scholar_classifier.yml
@@ -31,5 +31,5 @@ jobs:
         GMAIL_USERNAME: ${{ secrets.GMAIL_USERNAME }}
         GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
         SLACK_API_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
-        PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+        PPLX_API_KEY: ${{ secrets.PPLX_API_KEY }}
       run: python scholar_classifier.py
